--- a/Texto base.html
+++ b/Texto base.html
@@ -20,10 +20,10 @@
       <h2>beneficios</h2>
       
 <ul>
-      <li>*atendimnto aos clientes</li>
-      <li>*espaço diferenciado
-            *localização
-            *profissionais qualificados 
+      <li class="itens">*atendimnto aos clientes</li>
+      <li class="itens">*espaço diferenciado</li>
+           <li class="itens"> *localização</li>
+          <li class="itens">  *profissionais qualificados </li>
 </ul>
 </body>
 </html>
